k8s/flux-playground/traefik-minikube/whoami/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefixRegex:
    regex:
      - '/[^/]+'
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: replace-path-regex
spec:
  replacePathRegex:
    regex: ^(.*)bar/three/foo(.*)
    replacement: ${1}four$2
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-foo-bar
spec:
  addPrefix:
    prefix: /one/foo/bar/two/foo/bar/three/foo/bar
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: custom-header
spec:
  headers:
    customRequestHeaders:
      X-Custom-Request-Header: 'Custom Request Header'
    customResponseHeaders:
      X-Custom-Response-Header: 'Custom Response Header'
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`whoami.traefik.minikube`)
      services:
        - kind: Service
          name: whoami
          port: 80
      middlewares:
        - name: add-foo-bar
        - name: replace-path-regex
        - name: strip-prefix
        - name: strip-prefix
        - name: custom-header
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-domain
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`whoami.my-domain.home.com`)
      services:
        - kind: Service
          name: whoami
          port: 80
